syntax = "proto3";

package gitopssets.v1;

option go_package = "github.com/weaveworks/weave-gitops-enterprise/gitopssets/api";

message GitOpsSet {
    string                name                     = 1;
    string                namespace                = 2;
    repeated ResourceRef  inventory                = 3;
    repeated Condition    conditions               = 4;
    repeated string       generators               = 5;
    string                type                     = 6;
    map<string, string>                labels      = 7;
    map<string, string>                annotations = 8;
    SourceRef sourceRef            = 9;
    bool suspended = 10;
}

message SourceRef {
    string apiVersion = 1;
    string kind       = 2;
    string name       = 3;
    string namespace  = 4;
}

message GitOpsSetListError {
    string namespace = 1;
    string message = 2;
    string clusterName = 3;
}

message ResourceRef {
    string id       = 1;
    string version  = 2;
}

message Condition {
    string type = 1;
    string status = 2;
    string reason = 3;
    string message = 4;
    string timestamp = 5;
}

// GitOpsSet describes the configured generators.
message GitOpsSetGenerator { 
   string list = 1;
   string git_repository = 2;
}


