syntax = "proto3";

package wego_ee_profiles.v1;

option go_package = "github.com/weaveworks/weave-gitops-enterprise/cmd/clusters-service/pkg/protos/profiles";

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "WeGo Profiles API",
      version: "0.1";
      description: "The WeGo Profiles API handles operations for Weave GitOps Profiles";
    };
    consumes: "profiles/json";
    produces: "profiles/json";
};

service Profiles {
    // GetProfiles returns a list of profiles from the cluster.
    rpc GetProfiles(GetProfilesRequest)
        returns (GetProfilesResponse){
        option (google.api.http) = {
            get: "/v1/profiles"
        };
    }

    // GetProfileValues returns a list of values for a given version of a profile from the cluster.
    rpc GetProfileValues(GetProfileValuesRequest)
    returns (google.api.HttpBody){
        option (google.api.http) = {
            get: "/v1/profiles/{profile_name}/{profile_version}/values"
        };
    }
}

message Maintainer {
  // The name of the Maintainer
  string name = 1;
  // The email of the Maintainer
  string email = 2;
  // The URL to a Maintainer's website
  string url = 3;
}

message HelmRepository {
  // The name of the HelmRepository
  string name = 1;
  // The namespace of the HelmRepository
  string namespace = 2;
}

message Profile {
  // The name of the Profile
  string name = 1;
  // The URL to a relevant project page, git repo, or contact person
  string home = 2;
  // A list of URLs to the source code of this chart
  repeated string sources = 3;
  // A one-sentence description of the Profile
  string description = 4;
  // A list of string keywords
  repeated string keywords = 5;
  // A list of Maintainers
  repeated Maintainer maintainers = 6;
  // The URL to an icon file
  string icon = 7;
  // A map of annotations
  map<string, string> annotations = 8;
  // The Kubernetes version
  string kube_version = 9;
  // The Flux HelmRepository
  HelmRepository helm_repository = 10;
  // A list of available versions
  repeated string available_versions = 11;
  // The layer of the profile
  string layer = 12;
}

message GetProfilesRequest {
}

message GetProfilesResponse {
  // A list of Profiles
  repeated Profile profiles = 1;
}

message GetProfileValuesRequest {
  // The name of the Profile
  string profile_name = 1;
  // The version of the Profile
  string profile_version = 2;
}

message GetProfileValuesResponse{
  // The base64 encoded values file of the profile.
  string values = 1;
}

message ProfileValues {
  // The name of the Profile
  string name = 1;
  // The version of the Profile
  string version = 2;
  // The base64 encoded values file of the profile
  string values = 3;
}
